# rmtld3synth

./: .gitignore  Makefile.in  configure  dune-project  rmtld3synth.opam
.github/workflows/: linux-build.yml  windows-build.yml
doc/: LtlxmsDiagram.mmd  SetupGuideOCAML.md
doc/ltlxms/: LtlxmsDiagram.mmd
src/: dune  helper.ml  rmtld3synth.ml
src/interface/: dune
src/js/: dune
src/js/stub/: dune  helper.ml
src/ltlxms/: check.ml  dune  encoding.ml  formulas.ml  ltlxml.ml  ltlxms.ml  portFormulas.md  syntax.ml  trace_check.ml
src/ltlxms/stub/: dune  ltlxms.ml
src/ltlxms/test/: dune  input.ml  placeHolder  property0.ltlxms  property1.ltlxms  property10.ltlxms  property11.ltlxms  property12.ltlxms  property2.ltlxms  property3.ltlxms  property4.ltlxms  property5.ltlxms  property6.ltlxms  property7.ltlxms  property8.ltlxms  property9.ltlxms  test12.json  test14.json  test14out.txt  test15.json  test15out.txt  test16.json  test16out.txt  test17.json  test17out.txt  test19.json  test19out.txt  test20out.txt  test2out.txt  test3.json  test3out.txt  test4out.txt  test5out.txt  test6.json  test6out.txt  test7out.txt  test8.json  test_formulas.ml  test_input.json  test_ltlxms.ml  (+2 more)
src/ltlxms/tests/: dune  input.ml  property.json  property1.json  property13.ltlxms  property2.json  property3.json  test10.json  test10out.txt  test11.json  test11out.txt  test12out.txt  test13.json  test13out.txt  test14out.txt  test15.out  test16.json  test18.json  test18.out  test2.json  test20.json  test21.json  test21.out  test3.json  test4.json  test5.json  test7.json  test7.out  test8.out  test9.json  test9.out  test_formulas.ml  test_ltlxms.ml  test_print_ltlxms.ml  test_until_trace.ml  test_with_trace.ml
src/sequence/: dune  snapshot.ml
src/sequence/tests/: Scenario6_Test1.json  dune  expressions_and_AABB.ml  expressions_and_OBB.ml  scenario1.json  test_snapshot_sequence.ml
src/trace/: dune  xyz.ml
src/trace/docs/: progress.md
src/trace/test/: Scenario1_Test1.json  Scenario1_Test2.json  Scenario3_Test1.json  Scenario5_Test1.json  dune  expressions_and_AABB.ml  test_circles.ml  test_trace.ml
src/trace/tests/: Scenario4_Test1.json  Scenario5_Test1.json  dune  expressions_and_AABB.ml  expressions_and_OBB.ml  (+1 more)
unittests/: test.sh
unittests/integration/: run.sh
unittests/rmtld3/: dune
