(test
 (name test_ltlxms)
 (libraries yojson ltlxms)
 (modules test_ltlxms))

(test
 (name test_formulas)
 (libraries z3 yojson ltlxms)
 (modules test_formulas))

(executable
 (name test_until_trace)
 (modules test_until_trace)
 (libraries ltlxms sequence z3 yojson))

(rule
 (alias runtest)
 (deps
   test_until_trace.exe
   ../../sequence/tests/Scenario5_Test1.json
   property.json)
 (action
   (run ./test_until_trace.exe ../../sequence/tests/Scenario5_Test1.json property.json))
)

(rule
 (alias runtest)
 (deps
   test_until_trace.exe
   ../../sequence/tests/Scenario6_Test1.json
   property2.json)
 (action
   (run ./test_until_trace.exe ../../sequence/tests/Scenario6_Test1.json property2.json))
)